corrected the spacing of the strawberry and nav bar components

--- a/components/navigation.module.css
+++ b/components/navigation.module.css
@@ -43,20 +43,6 @@
     }
 }
 
-.bigContainer{
-    display: flex;
-    flex-direction: row; 
-    justify-content: center;
-    align-items: center;
-    margin-top: 60px;
-    padding-left: 10%;
-    padding-right: 10%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    padding-bottom: 10px;
-}
-
 .button {
     height: 40px;
     width: 50px; 
@@ -110,12 +96,14 @@
         flex-direction: row; 
         justify-content: center;
         align-items: center;
-        margin-top: 60px;
+        margin-top: 32px;
         padding-left: 10%;
         padding-right: 10%;
         margin-left: auto;
         margin-right: auto;
         position: relative;
+        width: 632px;
+        height: 40px;
     }
     
 }
