--- a/components/strawberry.module.css
+++ b/components/strawberry.module.css
@@ -1,6 +1,24 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 40px;
+}
+
+@media (min-width: 780px) {
+    .container{
+        max-width: 1000px;
+        width: 100%;
+        height: 90px;
+        padding-top: 80px;
+    }
+}
+
 .text {
     text-align: center;
-    font-size: 35px; 
+    font-size: 48px; 
     margin: 0;
     color: #1A361E; 
     font-family: 'Ilyas';
@@ -8,7 +26,7 @@
 
 @media (min-width: 780px) {
     .text {
-        font-size: 60px; 
+        font-size: 100px; 
     }
 }
 
